--- a/templates/GestionClientView/unClient.html.twig.twig
+++ b/templates/GestionClientView/unClient.html.twig.twig
@@ -1,7 +1,24 @@
-
 {# empty Twig template #}
 {% extends "layout.html.twig" %}
 {% block contenu %}
+    {% block recherche %}
+        <h3> Recherche </h3>
+        <div class="container">
+            <form action="?c=GestionClient&a=chercheUn" method="post">
+                <div class="form-group">
+                    <label for="Numéro du client"> Id du client</label>
+                    <select class="form-control" id="titre" name="id">
+                        {% for id in lesId %}
+                            <option>{{ id['id'] }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <input type="submit" value="Voir" class="btn btn-default"/>
+            </form>
+        </div>
+    {% endblock %}
+    {% if unClient %}
+        {% block affiche %}
     <p><h2> Informations du client numéro {{ unClient.getNoCli() }}</h2></p>
 <p>{{ unClient.getPrenomCli() }} {{ unClient.getNomCli() }}</p>
 <p> {{ unClient.getAdresseRue1Cli() }} </p>
@@ -10,6 +27,8 @@
     {% endif %}
 <p> {{ unClient.getCpCli() }} {{ unClient.getVilleCli() }}</p>
 <p>{{ unClient.getTelCli() }}</p>
+{% endblock %}
+{% endif %}
 {% endblock %}
 {% block footer %}
     {{ parent() }}
